--- a/cv.tex
+++ b/cv.tex
@@ -62,9 +62,9 @@ customers, doing the best to understand and satisfy their needs.
 \section{Professional Expertise}
 \begin{itemize}
 \item Deep web development knowledge, ranging from back--end programming in
-  Ruby, Java and PHP to front--end programming using JavaScript and HTML + CSS.
-  Knowledge of back--end frameworks (Rails, Tapestry) and front--end libraries
-  (jQuery, jQuery UI). Prefer back--end rather than front--end programming.
+Ruby, Java and PHP, to front--end programming using JavaScript and HTML + CSS.
+Knowledge of back--end frameworks (Rails, Tapestry) and front--end libraries
+(jQuery, jQuery UI). Prefer back--end rather than front--end programming.
 \item Object--oriented design and programming.
 \item Strong practical knowledge of Ruby, Java, C++ and C.
 \item Concurrent and network programming, including POSIX threads, BSD sockets,
@@ -125,18 +125,7 @@ in projects such as small websites development.}
 {Universidad de Buenos Aires}{Buenos Aires, Argentina}{}{%
 \begin{itemize}%
   \item ``Algorithms and Programming I''
-    \begin{itemize}%
-      \item I/O, sorting and searching, big-O notation, basic data structures
-        (stack, queue, list), recursion, divide \& conquer algorithms,
-        introduction to OOP in Python.
-    \end{itemize}
   \item ``Algorithms and Programming II''
-    \begin{itemize}%
-      \item C with dynamic memory management, advanced data structures (linked
-          list, hash, tree, heap, graph), advanced sorting algorithms
-          (Heapsort, Mergesort, Quicksort, Radixsort, etc.), algorithms design
-          techniques (backtracking, greedy algorithms and dynamic programming).
-    \end{itemize}
 \end{itemize}
 }
 %
@@ -216,7 +205,7 @@ Service (DAAD) to do research work at the TU Braunschweig}{Germany}{}{}{}{}
 travel.}
 \cvlistitem{Cooking.}
 \cvlistitem{Film Geek, owner of a large constantly growing library of movies.}
-\cvlistitem{Improving my development environment, constantly my favourite
-editor (Vim) and trying new tools.}
+\cvlistitem{Tweaking and tunning my development environment, constantly
+discovering new features in my favourite editor (Vim) and trying new tools.}
 \cvlistitem{Document composition with \LaTeX.}
 \end{document}
